@@ -105,6 +105,7 @@ All tools:
 Bug Fixes:
 - PR#4012: Map.map and Map.mapi do not conform to specification
 - PR#4478: better error messages for type definition mismatches
+- PR#4683: labltk script uses fixed path on windows
 - PR#4742: finalisation function raising an exception blocks other finalisations
 - PR#4775: compiler crash on crazy types (temporary fix)
 - PR#4964: parenthesized names for infix functions in annot files
